--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Hola soy Jesus Valverde, desarrollador web en progreso, entra para ver mi portafolio">
     <meta name="author" content="Jesus Valverde">
     <meta name="robots" content="index,follow">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Jesus Valverde</title>
 </head>
 <body>
