--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     <header class="header">
         <!--Logo-->
         <div class="logo__container">
-            <a href="#" class="logo__link">
+            <a href="index.html" class="logo__link">
                 <img class="logo__img" src="/images/logo/logo.png" alt="logo personal">
                 <p class="logo__txt">JESVAL</p>
             </a>
@@ -43,10 +43,20 @@
         </div>
         <div class="content">
             <div class="info">
-                
+                <p class="textbold">Utiliza las siguientes vías de contacto, o rellena el formulario. </p>
+                <p class="txt">Vía E-mail</p>
+                <p class="txt__info">jesusvalverde.dev@gmail.com</p>
+                <p class="txt">En mis redes sociales</p>
+                <p class="txt__info">@dev.jesval</p>
+                <p class="txt">Por teléfono</p>
+                <p class="txt__info">55-1234-567890</p>
             </div>
             <form action="">
-
+                <textarea placeholder="Escribe tu nombre" name="nombre"></textarea>
+                <textarea placeholder="Escribe tu e-mail" name="email"></textarea>
+                <textarea placeholder="Escribe tu teléfono(Opcional)" name="telefono"></textarea>
+                <textarea class="form__message" placeholder="Escribe tu mensaje" name="mensaje"></textarea>
+                <button class="btn" type="submit">ENVIAR MENSAJE</button>
             </form>
         </div>
     </main>
